fixed grid box spacing

--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -256,6 +256,8 @@ img {
 }
 .item1 {
   grid-column-start: 1;
+  grid-row-start: 1;
+  grid-row-end: 6;
   border-style: double solid;
   border-color: black;
   margin-left: 20px;
@@ -264,6 +266,8 @@ img {
 }
 .item2 {
   grid-column-start: 2;
+  grid-row-start: 1;
+  grid-row-end: 6;
   border-style: double solid;
   border-color: black;
   margin-right: 20px;
@@ -278,7 +282,7 @@ img {
   border-color: black;
   margin-right: 20px;
   margin-bottom: 20px;
-  background-image: url("Dia-D0(F).jpg");
+  background-color: white;
 }
 .itemfooter {
   grid-column: auto;
